# churn-prediction-for-public-SaaS-dataset

./: README.md  pyproject.toml
src/churn_prediction/: data.py  dataset.py  features.py  metrics.py  modeling.py  paths.py  train.py
src/churn_prediction/cli/: app.py
tests/: conftest.py  test_split.py  test_training_smoke.py
